PUG-044: Fix some problems and improve patterns;